Fix layout issue

--- a/styles.scss
+++ b/styles.scss
@@ -54,6 +54,12 @@ app-root {
   min-height: 100%;
 }
 
-app-beers > *:not(app-footer) {
-  flex: 1;
+app-beers {
+  flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+app-footer {
+  margin-top: auto;
 }
